--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "portfolioTemplate",
+  "name": "portafolio",
+  "homepage": "https://alexpedrasa10.github.io/Portafolio/",
   "version": "2.0.0",
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
     "typescript": "^4.7.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
