--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portafolio",
-  "homepage": "https://alexpedrasa10.github.io/Portafolio/",
+  "homepage": "https://alexpedrasa10.github.io/",
   "version": "2.0.0",
   "private": true,
   "dependencies": {
